# bot-discord-ollama

./: Cargo.toml  LICENSE  README.md  config.toml
src/: llm.rs  main.rs
