[package]
name = "bot-discord-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
futures = "0.3"
config = "0.15.8"
